test/fail/errors/ShouldBeASort.agda

-- This error never occurs.
module ShouldBeASort where

err = ShouldBeASort_Never_Occurs

